# backend

./: .env.template  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
migrations/: env.py  format_migrations.py
migrations/versions/: 2025_01_27_1938-402ed25556f2_user_model.py  2025_01_27_2022-018b162339cf_accesstoken_model.py
src/: main.py
src/api/controllers/: __init__.py  auth.py  users.py
src/api/dependencies/: access_token.py  strategy.py  user.py
src/api/dependencies/authentication/: __init__.py  access_token.py  backend.py  fastapi_users.py  fastapi_users_routers.py  strategy.py  user.py  user_manager.py
src/api/schemas/: user.py
src/core/: config.py
src/core/authentication/: transport.py  user_manager.py
src/core/database/: db_helper.py  model.py  repository.py
src/models/: __init__.py  access_token.py  user.py
src/models/mixins/: __init__.py
src/utils/: db_naming.py
