[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
alembic = "^1.14.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
orjson = "^3.10.15"
inflect = "^7.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
